--- a/spam_SMS_detector/requirements.txt
+++ b/spam_SMS_detector/requirements.txt
@@ -1,5 +1,5 @@
 streamlit
-nltk
+nltk>=3.8.1
 ipython[all]>=3.2.0
 pyzmq>=14.7.0
 Pillow>=2.9.0
@@ -9,4 +9,3 @@ scikit-learn>=0.18
 matplotlib>=1.4.3
 pandas>=0.19
 stopwords
-punkt
